--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 output: github_document
 ---
-
+[![Travis build status](https://travis-ci.org/cbhagya/perfectphyloR.svg?branch=master)](https://travis-ci.org/cbhagya/perfectphyloR)
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
